dify/api.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: dify-api
  labels:
    app.kubernetes.io/instance: dify-api
    app: dify-api
  namespace: dify
spec:
  replicas: 1
  revisionHistoryLimit: 1
  minReadySeconds: 10
  serviceName: dify-api
  selector:
    matchLabels:
      app: dify-api
  template:
    metadata:
      labels:
        app: dify-api
    spec:
      nodeSelector:
        kubernetes.io/os: linux
      containers:
        - name: dify-api
          image: langgenius/dify-api:0.6.9
          resources:
            requests:
              cpu: 200m
              memory: 256Mi
            limits:
              cpu: 1000m
              memory: 2Gi
          ports:
            - containerPort: 5001
              
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: dify-api-storage
              mountPath: /app/api/storage
  volumes:
    - name: dify-api-storage
      hostPath:
        path: /root/dify/app/api/storage
        type: DirectoryOrCreate
