dify/worker.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: dify-worker
  namespace: dify
  labels:
    app: dify-worker
    app.kubernetes.io/instance: dify-worker
spec:
  serviceName: 'dify-worker'
  replicas: 1
  selector:
    matchLabels:
      app: dify-worker
  template:
    metadata:
      labels:
        app: dify-worker
    spec:
      volumes:
        - name: dify-api-storage
          hostPath:
            path: /root/dify/app/api/storage
            type: DirectoryOrCreate
      containers:
        - name: dify-worker
          image: langgenius/dify-api:0.6.9
          ports:
            - containerPort: 5001
              protocol: TCP
          resources: {}
          volumeMounts:
            - name: dify-api-storage
              mountPath: /app/api/storage
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
