dify/postgres.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: dify-pg
  namespace: dify
spec:
  selector:
    matchLabels:
      app: dify-pg # has to match .spec.template.metadata.labels
  serviceName: "dify-pg"
  replicas: 1 # by default is 1
  template:
    metadata:
      labels:
        app: dify-pg # has to match .spec.selector.matchLabels
    spec:
      serviceAccountName: dify-pg
      terminationGracePeriodSeconds: 10
      nodeSelector:
        kubernetes.io/os: linux
      containers:
        - name: dify-pg
          image: postgres:15-alpine
          livenessProbe:
            exec:
              command:
                - "pg_isready"
                - "-U"
                - "$(POSTGRES_USER)"
                - "-d"
                - "$(POSTGRES_DB)"
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 2
            successThreshold: 1
            failureThreshold: 10
          resources:
            limits:
              cpu: 500m
              memory: 1Gi
            requests:
              cpu: 100m
              memory: 128Mi
          ports:
            - containerPort: 5432
              name: pg-port
          volumeMounts:
            - name: pg-data
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: pg-data
          hostPath:
            path: /root/dify/db/postgres/data
            type: DirectoryOrCreate

---
apiVersion: v1
kind: Service
metadata:
  name: dify-pg
  namespace: dify
spec:
  selector:
    app: dify-pg
  type: ClusterIP
  clusterIP: None
  ports:
    - name: postgres
      protocol: TCP
      port: 5432
      targetPort: 5432
